# ENG5220-2020-Team13

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  LICENSE  README.md  doxygen_config.conf  index.html  installBeeSafe.sh  map.html  runBeeSafe.sh
.github/ISSUE_TEMPLATE/: bug_report.md
css/: agency.css  agency.min.css
data/: testDatabase.json
doc/: about.txt  dox_config.conf  doxygen_html_style.css  project_plan
doc/LateX/: _account_8cpp.tex  _account_builder_8cpp.tex  _contact_8cpp.tex  _fence_8h.tex  _monitor_state_8h.tex  _poly_fence_8cpp.tex  _round_fence_8cpp.tex  _uart_8cpp.tex  _ublox_8h.tex  annotated.tex  class_active_monitor_state.tex  class_contact.tex  class_fence.tex  class_round_fence.tex  class_ublox.tex  dir_1fcb3bf4dc93ae6058d2c81ac1df99e4.tex  dir_4796d783f2f9bd0a81f564028084bc34.tex  files.tex  hierarchy.tex  md_README.tex
doc/html/: _account_8cpp.html  _account_8cpp__incl.map  _account_8h.html  _account_8h__dep__incl.map  _account_8h__incl.map  _account_8h_source.html  _account_builder_8cpp.html  _account_builder_8cpp__incl.map  _account_builder_8h.html  _account_builder_8h__dep__incl.map  _account_builder_8h__incl.map  _account_builder_8h_source.html  _active_monitor_state_8cpp.html  _active_monitor_state_8cpp__incl.map  _active_monitor_state_8h.html  _active_monitor_state_8h__dep__incl.map  _active_monitor_state_8h__incl.map  _active_monitor_state_8h_source.html  _comms_8cpp.html  _comms_8cpp__incl.map  _comms_8h.html  _comms_8h__dep__incl.map  _comms_8h__incl.map  _comms_8h_source.html  _contact_8cpp.html  _contact_8cpp__incl.map  _contact_8h.html  _contact_8h__dep__incl.map  _contact_8h__incl.map  _contact_8h_source.html  _fence_8cpp.html  _fence_8cpp__incl.map  _fence_8h.html  _fence_8h__dep__incl.map  _fence_8h__incl.map  _fence_8h_source.html  _main_8cpp.html  _main_8cpp__incl.map  _monitor_8cpp.html  _monitor_8cpp__incl.map  (+157 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  (+62 more)
doc/latex/: _account_8h.tex  _account_builder_8h.tex  _active_monitor_state_8cpp.tex  _active_monitor_state_8h.tex  _comms_8cpp.tex  _comms_8h.tex  _contact_8h.tex  _fence_8cpp.tex  _main_8cpp.tex  _monitor_8cpp.tex  _monitor_8h.tex  _monitor_state_8cpp.tex  _passive_monitor_state_8cpp.tex  _passive_monitor_state_8h.tex  _poly_fence_8h.tex  _round_fence_8h.tex  _uart_8h.tex  _ublox_8cpp.tex  annotated.tex  class_account.tex  class_account_builder.tex  class_comms.tex  class_monitor.tex  class_monitor_state.tex  class_passive_monitor_state.tex  class_poly_fence.tex  class_uart.tex  dir_0fc4e4b5a7ba7c90ed8b66fa279eceaf.tex  dir_29a37cd362323c057dac24071bb04a17.tex  dir_29b95e3cf1fc465c248fba35fff15014.tex  dir_2bcd72cd0b092dad44d5d2bb06eea6c2.tex  dir_820b2b9dd608784780e51ab49715a98b.tex  dir_9329a9f26436799d824de1a435a6965f.tex  dir_a7d66c00b3756fca2347e92699d4650a.tex  dir_b0e42e934531accf81c21ce053bc6ad4.tex  dir_b290f227fb157130e49a644779978db8.tex  dir_c8fa76d8dc1b9e06ff8aeb3121608b1b.tex  dir_c99b046f6a8d3f36fae42dc3ac4f1052.tex  dir_cf376ea922ecc044511ff4559efcc6af.tex  dir_df0002e1a9421d58d011155506bddc46.tex  (+6 more)
doc/logo/: bee.eps
hardware/: README.md  about.txt  hw_revision_history.md
hardware/Footprints/: SN74AVC4T774PW.INI  c218h145t185_230_43.pad  gu_sma_jack_str.psm  r160_190.pad  r65_135.pad  r90_150.pad  s110.pad  sn74avc4t774pw.opj  sop16p65_500x640x108l60x24.psm  sop65p640x120-16n.psm  ublox_sara-g350-02x-01.psm
hardware/OrCAD/Design/: BEESAFE.BOM  BEESAFE.DRC  BEESAFE.DSN  BEESAFE_0.DBK  beeSafe.opj
hardware/OrCAD/Footprints/: SN74AVC4T774PW.INI  SN74AVC4T774PW.OLB  (+11 more)
hardware/PCBProduction/: BEESAFE.BOM  BOTTOM.art  DesignOutline.art  TOP.art  beeSafe_1V0-1-2.drl
html/: graph_legend.html  index.html
img/about/: 1.jfif  2.jfif  3.jfif  4.jfif  5.jfif  7.jfif
latex/: refman.tex
software/BeeSafePI/: .gitignore  CMakeLists.txt
software/BeeSafePI/data/: Account.json  TestAccount.json
software/BeeSafePI/src/: BeeSafe.cpp  BeeSafe.h  CMakeLists.txt  Main.cpp  main.cpp
software/BeeSafePI/src/account/: Account.cpp  Account.h  AccountBuilder.cpp  AccountBuilder.h
software/BeeSafePI/src/account/builders/: AccountBuilder.cpp  AccountBuilder.h
software/BeeSafePI/src/comms/: Comms.cpp  Comms.h  Communication.c  Communication.h  UArt.cpp  UArt.h  UBlox.cpp  UBlox.h  Uart.c  Uart.cpp  Uart.h  Ublox.cpp  Ublox.h
software/BeeSafePI/src/contact/: Contact.cpp  Contact.h
software/BeeSafePI/src/device/: Account.cpp  Account.h  AccountBuilder.cpp  AccountBuilder.h  Device.cpp  Device.h
software/BeeSafePI/src/device/builders/: AccountBuilder.cpp  AccountBuilder.h  DeviceBuilder.cpp  DeviceBuilder.h
software/BeeSafePI/src/geo/: Fence.cpp  Fence.h  GeoFence.cpp  GeoFence.h  GeoPath.cpp  GeoPath.h  PolyFence.cpp  PolyFence.h  RoundFence.cpp  RoundFence.h
software/BeeSafePI/src/monitor/: Monitor.cpp  Monitor.h
software/BeeSafePI/src/monitor/states/: ActiveMonitorState.cpp  ActiveMonitorState.h  MonitorState.cpp  MonitorState.h  PassiveMonitorState.cpp  PassiveMonitorState.h
software/BeeSafePI/tests/: CMakeLists.txt  test_account.cpp  test_accountbuilder.cpp  test_activemonitorstate.cpp  test_contact.cpp  test_fence.cpp  test_monitor.cpp  test_passivemonitorstate.cpp  test_polyfence.cpp  test_roundfence.cpp  test_uart.cpp  test_ublox.cpp
software/PiTest/: old_comms_test.c
software/beesafe_project/: manage.py
software/projects/: about.txt
software/src/: about.txt
testing/: about.txt  receive  send  testreceive.c  testsend.c
testing/hardware/: 2020_03_13_pcb_1v1_hw_test.csv  testrec.c  testreceive.c  testsend.c
tools/: about.txt
tools/YAT_file/: SingleAutomaticResponseTemplate.yat  readme.txt
(+519 files in other folders)
