add_executable(BeeSafePI BeeSafe.cpp BeeSafe.h geo/Fence.h geo/RoundFence.cpp geo/PolyFence.cpp contact/Contact.cpp contact/Contact.h geo/Fence.cpp geo/RoundFence.h geo/PolyFence.h device/Account.cpp device/Account.h device/AccountBuilder.cpp device/AccountBuilder.h monitor/Monitor.cpp monitor/Monitor.h monitor/states/MonitorState.cpp monitor/states/MonitorState.h monitor/states/PassiveMonitorState.cpp monitor/states/PassiveMonitorState.h monitor/states/ActiveMonitorState.cpp monitor/states/ActiveMonitorState.h comms/Comms.h comms/Comms.cpp comms/UBlox.h comms/UBlox.cpp comms/Uart.h comms/Uart.cpp)
target_link_libraries(BeeSafePI PRIVATE cpprestsdk::cpprest)
